--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~10.0.5",
     "ag-grid-angular": "^24.0.0",
     "ag-grid-community": "^24.0.0",
+    "ag-grid-enterprise": "24.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
